# messenger

./: .gitignore
qt_client/: CMakeLists.txt  listofchatswindow.ui  mainwindow.ui
qt_client/include/: chatwindow.h  client.h  globalclient.h  listofchatswindow.h  mainwindow.h  message.h
qt_client/src/: chatwindow.cpp  client.cpp  globalclient.cpp  listofchatswindow.cpp  mainwindow.cpp  message.cpp
qt_client/ui/: chatwindow.ui  listofchatswindow.ui  mainwindow.ui
qt_server/: CMakeLists.txt
qt_server/include/: database.h  message.h  server.h
qt_server/src/: database.cpp  main.cpp  message.cpp  server.cpp
